src/objects/LineItem__c.object
<CustomObject>
    <description>品目カスタムオブジェクト</description>
    <fields>
        <fullName>InvoiceStatement__c</fullName>
        <label>インボイス明細</label>
        <referenceTo>InvoiceStatement__c</referenceTo>
        <relationshipLabel>品目</relationshipLabel>
        <relationshipName>LineItemUnEu</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>製品管理</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>品目</relationshipLabel>
        <relationshipName>LineItemTxvk</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <description>単価情報</description>
        <label>単価</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitsSold__c</fullName>
        <description>最大18桁</description>
        <label>販売個数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>UnitPrice__c  *  UnitsSold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>品目</label>
    <nameField>
        <label>品目番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OrderInStock</fullName>
        <active>true</active>
        <description>在庫チェック</description>
        <errorConditionFormula>IF (
    ISNEW(),
    Merchandise__r.Quantity__c  &lt;  UnitsSold__c ,
    IF (
        UnitsSold__c  &lt;  PRIORVALUE( UnitsSold__c ) ,
        FALSE,
        Merchandise__r.Quantity__c &lt; (UnitsSold__c - PRIORVALUE(UnitsSold__c ))
    )
)</errorConditionFormula>
        <errorDisplayField>UnitsSold__c</errorDisplayField>
        <errorMessage>注文数が在庫数を越えていますよ</errorMessage>
    </validationRules>
</CustomObject>